correcion de diseno, hotelDetailPage

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta name="description" content="Magna Hoteles - Carta Interactiva" />
+    <meta author="Elias Tambornini" />
+    <meta name="keywords" content="Magna Hoteles, Carta Interactiva, Hoteles, Reservas" />
+    
     <title>Magna Hoteles - Carta Interactiva</title>
   </head>
   <body>
